--- a/CSS/Leave_status.css
+++ b/CSS/Leave_status.css
@@ -16,15 +16,16 @@ body {
         }
 
         .status-container {
-            background-color: rgba(255, 255, 255, 0.9);
+            /* background-color: rgba(255, 255, 255, 0.9); */
             border-radius: 20px;
+            background-color: #fff;
             width: 100%;
             padding: 30px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .status-title {
-            background-color: #c7ecee;
+            /* background-color: #c7ecee; */
             color: #2c3e50;
             padding: 15px;
             text-align: center;
